--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asn1crypto==0.24.0
+astroid==2.2.5
 beautifulsoup4==4.7.1
 certifi==2019.3.9
 cffi==1.12.2
@@ -7,14 +8,20 @@ cryptography==2.6.1
 cssselect==1.0.3
 future==0.17.1
 idna==2.8
+isort==4.3.15
 jsonpickle==1.1
+lazy-object-proxy==1.3.1
 lxml==4.3.2
+mccabe==0.6.1
 pycparser==2.19
 pycurl==7.43.0.2
+pylint==2.3.1
 python-telegram-bot==11.1.0
 requests==2.21.0
 selenium==3.141.0
 six==1.12.0
 soupsieve==1.8
 tornado==6.0.1
+typed-ast==1.3.1
 urllib3==1.24.1
+wrapt==1.11.1
