--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "crawler_utils"]
-	path = crawler_utils
+[submodule "src/main/python/crawler_utils"]
+	path = src/main/python/crawler_utils
 	url = https://github.com/andreybavt/crawler_utils.git
