--- a/src/main/resources/requirements.txt
+++ b/src/main/resources/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.14.2
 chardet==3.0.4
 cryptography==3.0
 decorator==4.4.2
+diskcache==5.0.1
 idna==2.10
 ImageHash==4.1.0
 importlib-metadata==1.7.0
