--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,69 @@
-version: '2.0'
+version: '3.8'
+
 services:
   selogertoken:
     build:
       dockerfile: seloger-token.Dockerfile
       context: .
     container_name: hobo-seloger-token
+    restart: unless-stopped
 
   crawler:
     build:
       dockerfile: crawler.Dockerfile
       context: .
     container_name: hobo-sapiens-crawler
+    restart: unless-stopped
+    volumes:
+      - ~/.hobo-sapiens/listings:/root/.hobo-sapiens/listings
+      - ~/.hobo-sapiens/image-hashes:/root/.hobo-sapiens/image-hashes
+      - ./filter.json:/usr/src/app/filter.json
+
+    depends_on:
+      - selogertoken
     environment:
       - HS_TELEGRAM_BOT_TOKEN
       - HS_TELEGRAM_CHAT_ID
       - HS_SELOGER_TOKEN_HOST=selogertoken
+    expose:
+      - 5000
+    ports:
+      - 5000:5000
 
-#    ports:
-#    - "5000:5000"
-#    volumes:
-#    - .:/code
-#    - logvolume01:/var/log
-#    links:
-#    - redis
-#  redis:
-#    image: redis
-#volumes:
-#  logvolume01: {}
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: monitoring_prometheus
+    restart: unless-stopped
+    volumes:
+      - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
+      - ~/.hobo-sapiens/prometheus:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+    expose:
+      - 9090
+    ports:
+      - 9090:9090
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: monitoring_grafana
+    restart: unless-stopped
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    volumes:
+      - ~/.hobo-sapiens/grafana:/var/lib/grafana
+      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning/
+      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin #MYPASSWORT
+      - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_DOMAIN=myrul.com
+      - GF_SMTP_ENABLED=true
+      - GF_SMTP_HOST=smtp.gmail.com:587
+      - GF_SMTP_USER=myadrress@gmail.com
+      - GF_SMTP_PASSWORD=mypassword
+      - GF_SMTP_FROM_ADDRESS=myaddress@gmail.com
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/dashboard.json
