--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       context: .
     container_name: hobo-seloger-token
     restart: unless-stopped
+    ports:
+      - 8001:8001
 
   crawler:
     build:
@@ -58,6 +60,12 @@ services:
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning/
       - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards
     environment:
+#      - GF_AUTH_DISABLE_LOGIN_FORM=true
+#      - GF_AUTH_ANONYMOUS_ENABLED=true
+#      - GF_AUTH_ANONYMOUS_ORG_NAME=Main Org.
+#      - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
+#      - GF_USERS_ALLOW_SIGN_UP=false
+
       - GF_SECURITY_ADMIN_PASSWORD=admin #MYPASSWORT
       - GF_USERS_ALLOW_SIGN_UP=false
       - GF_SERVER_DOMAIN=myrul.com
