--- a/src/main/resources/requirements.txt
+++ b/src/main/resources/requirements.txt
@@ -15,7 +15,7 @@ lxml==4.5.2
 more-itertools==8.4.0
 numpy==1.19.1
 packaging==20.4
-Pillow==7.2.0
+Pillow
 pluggy==0.13.1
 py==1.9.0
 pycparser==2.20
@@ -25,7 +25,7 @@ pytest==6.0.1
 python-telegram-bot==12.8
 PyWavelets==1.1.1
 requests==2.24.0
-scipy==1.5.2
+scipy
 six==1.15.0
 soupsieve==2.0.1
 toml==0.10.1
